--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CEP</string>
+    <string name="consultar">Consultar</string>
+    <string name="cep">CEP</string>
 </resources>
